#cmake_minimum_required(VERSION 3.3)
project(xParser)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -march=native -funroll-loops -O2")

set(SOURCE_FILES
        common/parser/implementations/arceager/arceager_depparser.h
        common/parser/implementations/arceager/arceager_macros.h
        common/parser/implementations/arceager/arceager_state.cpp
        common/parser/implementations/arceager/arceager_state.h
        common/parser/implementations/arceager/arceager_weight.cpp
        common/parser/implementations/arceager/arceager_weight.h
        common/parser/implementations/eisner/eisner_depparser.cpp
        common/parser/implementations/eisner/eisner_depparser.h
        common/parser/implementations/eisner/eisner_macros.cpp
        common/parser/implementations/eisner/eisner_macros.h
        common/parser/implementations/eisner/eisner_run.cpp
        common/parser/implementations/eisner/eisner_run.h
        common/parser/implementations/eisner/eisner_state.cpp
        common/parser/implementations/eisner/eisner_state.h
        common/parser/implementations/eisner/eisner_weight.cpp
        common/parser/implementations/eisner/eisner_weight.h
        common/parser/implementations/eisner3rd/eisner3rd_depparser.cpp
        common/parser/implementations/eisner3rd/eisner3rd_depparser.h
        common/parser/implementations/eisner3rd/eisner3rd_macros.cpp
        common/parser/implementations/eisner3rd/eisner3rd_macros.h
        common/parser/implementations/eisner3rd/eisner3rd_run.cpp
        common/parser/implementations/eisner3rd/eisner3rd_run.h
        common/parser/implementations/eisner3rd/eisner3rd_state.cpp
        common/parser/implementations/eisner3rd/eisner3rd_state.h
        common/parser/implementations/eisner3rd/eisner3rd_weight.cpp
        common/parser/implementations/eisner3rd/eisner3rd_weight.h
        common/parser/implementations/eisnergc/eisnergc_depparser.cpp
        common/parser/implementations/eisnergc/eisnergc_depparser.h
        common/parser/implementations/eisnergc/eisnergc_macros.cpp
        common/parser/implementations/eisnergc/eisnergc_macros.h
        common/parser/implementations/eisnergc/eisnergc_run.cpp
        common/parser/implementations/eisnergc/eisnergc_run.h
        common/parser/implementations/eisnergc/eisnergc_state.cpp
        common/parser/implementations/eisnergc/eisnergc_state.h
        common/parser/implementations/eisnergc/eisnergc_weight.cpp
        common/parser/implementations/eisnergc/eisnergc_weight.h
        common/parser/implementations/eisnergc3rd/eisnergc3rd_depparser.cpp
        common/parser/implementations/eisnergc3rd/eisnergc3rd_depparser.h
        common/parser/implementations/eisnergc3rd/eisnergc3rd_macros.cpp
        common/parser/implementations/eisnergc3rd/eisnergc3rd_macros.h
        common/parser/implementations/eisnergc3rd/eisnergc3rd_run.cpp
        common/parser/implementations/eisnergc3rd/eisnergc3rd_run.h
        common/parser/implementations/eisnergc3rd/eisnergc3rd_state.cpp
        common/parser/implementations/eisnergc3rd/eisnergc3rd_state.h
        common/parser/implementations/eisnergc3rd/eisnergc3rd_weight.cpp
        common/parser/implementations/eisnergc3rd/eisnergc3rd_weight.h
        common/parser/implementations/emptyeisner/emptyeisner_depparser.cpp
        common/parser/implementations/emptyeisner/emptyeisner_depparser.h
        common/parser/implementations/emptyeisner/emptyeisner_macros.cpp
        common/parser/implementations/emptyeisner/emptyeisner_macros.h
        common/parser/implementations/emptyeisner/emptyeisner_run.cpp
        common/parser/implementations/emptyeisner/emptyeisner_run.h
        common/parser/implementations/emptyeisner/emptyeisner_state.cpp
        common/parser/implementations/emptyeisner/emptyeisner_state.h
        common/parser/implementations/emptyeisner/emptyeisner_weight.cpp
        common/parser/implementations/emptyeisner/emptyeisner_weight.h
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_depparser.cpp
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_depparser.h
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_macros.cpp
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_macros.h
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_run.cpp
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_run.h
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_state.cpp
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_state.h
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_weight.cpp
        common/parser/implementations/emptyeisnergc3rd/emptyeisnergc3rd_weight.h
        common/parser/agenda.h
        common/parser/depparser_base.h
        common/parser/macros_base.cpp
        common/parser/macros_base.h
        common/parser/run_base.h
        common/parser/weight_base.h
        common/token/deplabel.cpp
        common/token/deplabel.h
        common/token/emp.cpp
        common/token/emp.h
        common/token/pos.cpp
        common/token/pos.h
        common/token/token.cpp
        common/token/token.h
        common/token/word.cpp
        common/token/word.h
        common/ngram.h
        include/learning/perceptron/packed_score.h
        include/learning/perceptron/score.cpp
        include/learning/perceptron/score.h
        include/learning/svm/smo.h
        include/learning/svm/svm_macros.h
        include/ngram.h
        main.cpp common/parser/implementations/titovdp/titovdp_run.h common/parser/implementations/titovdp/titovdp_run.cpp common/parser/implementations/titovdp/titovdp_depparser.cpp common/parser/implementations/titovdp/titovdp_depparser.h common/parser/implementations/titovdp/titovdp_weight.cpp common/parser/implementations/titovdp/titovdp_weight.h common/parser/implementations/titovdp/titovdp_state.cpp common/parser/implementations/titovdp/titovdp_state.h common/parser/implementations/titovdp/titovdp_oracle.cpp common/parser/implementations/titovdp/titovdp_features.cpp)

add_executable(xParser ${SOURCE_FILES})

include_directories(.)
